need to figure out the single Expression return value for evaluate.