@@ -3,118 +3,70 @@ package enginePackage.implementation.utils;
 import enginePackage.implementation.expression.function.math.*;
 import enginePackage.implementation.expression.function.string.*;
 import enginePackage.api.Expression;
-
-import java.lang.reflect.Constructor;
 import java.util.List;
 
 public enum OperationMenu {
     PLUS {
         @Override
-        public Expression<?> createExpression(List<Expression<?>> arguments) {
-            validateArguments(arguments, Plus.class);
-            return new Plus(castArgument(arguments.getFirst(), Number.class), castArgument(arguments.get(1), Number.class));
+        public Expression createExpression(List<Expression> arguments) {
+            return new Plus(arguments.get(0), arguments.get(1));
         }
     },
     MINUS {
         @Override
-        public Expression<?> createExpression(List<Expression<?>> arguments) {
-            validateArguments(arguments, Minus.class);
-            return new Minus(castArgument(arguments.getFirst(), Number.class), castArgument(arguments.get(1), Number.class));
+        public Expression createExpression(List<Expression> arguments) {
+            return new Minus(arguments.get(0), arguments.get(1));
         }
     },
     TIMES {
         @Override
-        public Expression<?> createExpression(List<Expression<?>> arguments) {
-            validateArguments(arguments, Times.class);
-            return new Times(castArgument(arguments.getFirst(), Number.class), castArgument(arguments.get(1), Number.class));
+        public Expression createExpression(List<Expression> arguments) {
+            return new Times(arguments.get(0), arguments.get(1));
         }
     },
     DIVIDE {
         @Override
-        public Expression<?> createExpression(List<Expression<?>> arguments) {
-            validateArguments(arguments, Divide.class);
-            return new Divide(castArgument(arguments.getFirst(), Number.class), castArgument(arguments.get(1), Number.class));
+        public Expression createExpression(List<Expression> arguments) {
+            return new Divide(arguments.get(0), arguments.get(1));
         }
     },
     POW {
         @Override
-        public Expression<?> createExpression(List<Expression<?>> arguments) {
-            validateArguments(arguments, Pow.class);
-            return new Pow(castArgument(arguments.getFirst(), Number.class), castArgument(arguments.get(1), Number.class));
+        public Expression createExpression(List<Expression> arguments) {
+            return new Pow(arguments.get(0), arguments.get(1));
         }
     },
     ABS {
         @Override
-        public Expression<?> createExpression(List<Expression<?>> arguments) {
-            validateArguments(arguments, Abs.class);
-            return new Abs(castArgument(arguments.getFirst(), Number.class));
+        public Expression createExpression(List<Expression> arguments) {
+            return new Abs(arguments.getFirst());
         }
     },
     MOD {
         @Override
-        public Expression<?> createExpression(List<Expression<?>> arguments) {
-            validateArguments(arguments, Mod.class);
-            return new Mod(castArgument(arguments.getFirst(), Number.class), castArgument(arguments.get(1), Number.class));
+        public Expression createExpression(List<Expression> arguments) {
+            return new Mod(arguments.get(0), arguments.get(1));
         }
     },
     CONCAT {
         @Override
-        public Expression<?> createExpression(List<Expression<?>> arguments) {
-            validateArguments(arguments, Concat.class);
-            return new Concat(castArgument(arguments.getFirst(), Text.class), castArgument(arguments.get(1), Text.class));
+        public Expression createExpression(List<Expression> arguments) {
+            return new Concat(arguments.get(0), arguments.get(1));
         }
     },
     SUB {
         @Override
-        public Expression<?> createExpression(List<Expression<?>> arguments) {
-            validateArguments(arguments, Sub.class);
-            return new Sub(castArgument(arguments.getFirst(), Text.class), castArgument(arguments.get(1), Text.class), castArgument(arguments.get(2), Text.class));
+        public Expression createExpression(List<Expression> arguments) {
+            return new Sub(arguments.get(0), arguments.get(1), arguments.get(2));
         }
     },
     REF {
         @Override
-        public Expression<?> createExpression(List<Expression<?>> arguments) {
+        public Expression createExpression(List<Expression> arguments) {
             throw new UnsupportedOperationException("REF operation is not yet implemented.");
         }
     };
 
-    private static void validateArguments(List<Expression<?>> arguments, Class<? extends Expression<?>> clazz) {
-        try {
-            Constructor<?>[] constructors = clazz.getConstructors();
-            boolean validConstructor = false;
-
-            for (Constructor<?> constructor : constructors) {
-                Class<?>[] parameterTypes = constructor.getParameterTypes();
-
-                if (parameterTypes.length == arguments.size()) {
-                    validConstructor = true;
-                    for (int i = 0; i < parameterTypes.length; i++) {
-                        if (!parameterTypes[i].isInstance(arguments.get(i))) {
-                            validConstructor = false;
-                            break;
-                        }
-                    }
-                    if (validConstructor) {
-                        break;
-                    }
-                }
-            }
-
-            if (!validConstructor) {
-                throw new IllegalArgumentException("No valid constructor found for " + clazz.getSimpleName());
-            }
-        } catch (Exception e) {
-            throw new RuntimeException("Error validating constructor arguments", e);
-        }
-    }
-
-    @SuppressWarnings("unchecked")
-    private static <T> Expression<T> castArgument(Expression<?> arg, Class<T> clazz) {
-        if (!clazz.isInstance(arg.evaluate())) {
-            throw new IllegalArgumentException("Argument is not of type " + clazz.getSimpleName());
-        }
-        return (Expression<T>) arg;
-    }
-
-    public abstract Expression<?> createExpression(List<Expression<?>> arguments);
+    public abstract Expression createExpression(List<Expression> arguments);
 }
+
